<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.coronatrackerandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_countries"
        android:name="com.example.coronatrackerandroid.ui.countries.CountriesFragment"
        android:label="@string/title_country"
        tools:layout="@layout/fragment_countries" />

    <fragment
        android:id="@+id/navigation_bluetooth"
        android:name="com.example.coronatrackerandroid.ui.bluetooth.BluetoothFragment"
        android:label="@string/title_bluetooth"
        tools:layout="@layout/fragment_bluetooth" />

    <fragment
        android:id="@+id/navigation_geofencing"
        android:name="com.example.coronatrackerandroid.ui.notifications.GeofencingFragment"
        android:label="@string/title_geofencing"
        tools:layout="@layout/fragment_geofencing" />


    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.coronatrackerandroid.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/news_fragment" />
</navigation>
